clusters/openshift/apps/development/gitea/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway
    namespace: openshift-ingress
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway-internal
    namespace: openshift-ingress
  hostnames:
  - gitea.vanillax.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - group: ''
      kind: Service
      name: gitea-http
      port: 3000
      weight: 1
